--- a/Notebooks/Tweets_Scraper.ipynb
+++ b/Notebooks/Tweets_Scraper.ipynb
@@ -159,7 +159,44 @@
       " 67%|██████▋   | 72907/108241 [20:28:14<5:53:19,  1.67it/s]Rate limit exceeded. Sleeping for 359 seconds.\n",
       " 68%|██████▊   | 73807/108241 [20:38:55<2:58:12,  3.22it/s]Rate limit exceeded. Sleeping for 620 seconds.\n",
       " 69%|██████▉   | 74707/108241 [20:53:58<2:51:47,  3.25it/s]Rate limit exceeded. Sleeping for 619 seconds.\n",
-      " 70%|██████▉   | 75607/108241 [21:08:59<2:46:58,  3.26it/s]Rate limit exceeded. Sleeping for 619 seconds.\n"
+      " 70%|██████▉   | 75607/108241 [21:08:59<2:46:58,  3.26it/s]Rate limit exceeded. Sleeping for 619 seconds.\n",
+      " 71%|███████   | 76507/108241 [21:23:59<2:43:07,  3.24it/s]Rate limit exceeded. Sleeping for 620 seconds.\n",
+      " 72%|███████▏  | 77408/108241 [21:55:17<2:37:49,  3.26it/s]Rate limit exceeded. Sleeping for 616 seconds.\n",
+      " 72%|███████▏  | 78308/108241 [22:13:23<4:13:09,  1.97it/s]Rate limit exceeded. Sleeping for 432 seconds.\n",
+      " 73%|███████▎  | 79208/108241 [22:28:22<4:09:52,  1.94it/s]Rate limit exceeded. Sleeping for 435 seconds.\n",
+      " 74%|███████▍  | 80108/108241 [22:44:27<4:34:22,  1.71it/s]Rate limit exceeded. Sleeping for 372 seconds.\n",
+      " 75%|███████▍  | 81008/108241 [22:55:29<2:25:09,  3.13it/s]Rate limit exceeded. Sleeping for 611 seconds.\n",
+      " 76%|███████▌  | 81908/108241 [23:13:22<3:44:39,  1.95it/s]Rate limit exceeded. Sleeping for 439 seconds.\n",
+      " 77%|███████▋  | 82808/108241 [23:25:33<2:20:01,  3.03it/s]Rate limit exceeded. Sleeping for 610 seconds.\n",
+      " 77%|███████▋  | 83708/108241 [23:43:33<3:37:35,  1.88it/s]Rate limit exceeded. Sleeping for 431 seconds.\n",
+      " 78%|███████▊  | 84608/108241 [23:55:35<2:06:58,  3.10it/s]Rate limit exceeded. Sleeping for 611 seconds.\n",
+      " 79%|███████▉  | 85508/108241 [24:13:33<3:17:53,  1.91it/s]Rate limit exceeded. Sleeping for 435 seconds.\n",
+      " 80%|███████▉  | 86408/108241 [24:25:38<1:54:12,  3.19it/s]Rate limit exceeded. Sleeping for 611 seconds.\n",
+      " 81%|████████  | 87309/108241 [24:43:52<2:58:34,  1.95it/s]Rate limit exceeded. Sleeping for 439 seconds.\n",
+      " 81%|████████▏ | 88209/108241 [24:58:54<2:52:08,  1.94it/s]Rate limit exceeded. Sleeping for 439 seconds.\n",
+      " 82%|████████▏ | 89109/108241 [25:10:59<1:42:12,  3.12it/s]Rate limit exceeded. Sleeping for 615 seconds.\n",
+      " 83%|████████▎ | 90009/108241 [25:28:47<2:36:03,  1.95it/s]Rate limit exceeded. Sleeping for 448 seconds.\n",
+      " 84%|████████▍ | 90909/108241 [25:41:08<1:28:27,  3.27it/s]Rate limit exceeded. Sleeping for 608 seconds.\n",
+      " 85%|████████▍ | 91809/108241 [25:58:59<2:31:57,  1.80it/s]Rate limit exceeded. Sleeping for 439 seconds.\n",
+      " 86%|████████▌ | 92709/108241 [26:14:00<2:14:18,  1.93it/s]Rate limit exceeded. Sleeping for 440 seconds.\n",
+      " 86%|████████▋ | 93609/108241 [26:28:57<2:04:44,  1.95it/s]Rate limit exceeded. Sleeping for 445 seconds.\n",
+      " 87%|████████▋ | 94509/108241 [26:45:23<2:12:16,  1.73it/s]Rate limit exceeded. Sleeping for 361 seconds.\n",
+      " 88%|████████▊ | 95409/108241 [26:56:10<1:05:18,  3.27it/s]Rate limit exceeded. Sleeping for 615 seconds.\n",
+      " 89%|████████▉ | 96309/108241 [27:11:14<1:01:27,  3.24it/s]Rate limit exceeded. Sleeping for 612 seconds.\n",
+      " 90%|████████▉ | 97209/108241 [27:26:14<59:15,  3.10it/s]  Rate limit exceeded. Sleeping for 614 seconds.\n",
+      " 91%|█████████ | 98109/108241 [27:44:16<1:26:44,  1.95it/s]Rate limit exceeded. Sleeping for 434 seconds.\n",
+      " 91%|█████████▏| 99009/108241 [27:56:48<49:02,  3.14it/s]Rate limit exceeded. Sleeping for 583 seconds.\n",
+      " 92%|█████████▏| 99909/108241 [28:11:28<50:03,  2.77it/s]Rate limit exceeded. Sleeping for 603 seconds.\n",
+      " 93%|█████████▎| 100809/108241 [28:29:15<1:03:27,  1.95it/s]Rate limit exceeded. Sleeping for 439 seconds.\n",
+      " 94%|█████████▍| 101709/108241 [28:45:15<58:54,  1.85it/s]  Rate limit exceeded. Sleeping for 380 seconds.\n",
+      " 95%|█████████▍| 102609/108241 [29:00:26<1:06:45,  1.41it/s]Rate limit exceeded. Sleeping for 372 seconds.\n",
+      " 96%|█████████▌| 103509/108241 [29:11:29<25:40,  3.07it/s]Rate limit exceeded. Sleeping for 611 seconds.\n",
+      " 96%|█████████▋| 104409/108241 [29:26:32<19:56,  3.20it/s]Rate limit exceeded. Sleeping for 609 seconds.\n",
+      " 97%|█████████▋| 105309/108241 [29:44:27<26:17,  1.86it/s]Rate limit exceeded. Sleeping for 437 seconds.\n",
+      " 98%|█████████▊| 106209/108241 [29:59:24<17:20,  1.95it/s]Rate limit exceeded. Sleeping for 441 seconds.\n",
+      " 99%|█████████▉| 107109/108241 [30:15:28<10:55,  1.73it/s]Rate limit exceeded. Sleeping for 379 seconds.\n",
+      "100%|█████████▉| 108009/108241 [30:29:30<01:49,  2.11it/s]Rate limit exceeded. Sleeping for 439 seconds.\n",
+      "100%|██████████| 108241/108241 [30:38:48<00:00,  1.02s/it]\n"
      ]
     }
    ],
@@ -174,11 +211,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.to_csv('dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>sarcastic</th>\n",
+       "      <th>tweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>508012297558577154</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LOL ! \\nBC badaa gaandu hai to !\\nso jaa lodu ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>507828766161121280</td>\n",
+       "      <td>0</td>\n",
+       "      <td>@OFFICIAL_FC_PAK apni sakh khud sambhalen aur ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2951021322</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ek aadmi pareshan ho kar Ae bhagwan aisi zinda...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2387227409649664</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Lol RT @ThePrachi: @shrikhande Who can sing a ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>785560441963425792</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108236</th>\n",
+       "      <td>788093126841868288</td>\n",
+       "      <td>0</td>\n",
+       "      <td>'\\nEk Hunar Hai Jo Kar Gaya Hun Main,,\\n-\\nSab...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108237</th>\n",
+       "      <td>974612791930712064</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1 Jnaza Ja Raha tha Or Bhot S Log 7 Ja rahy Th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108238</th>\n",
+       "      <td>881421322516971520</td>\n",
+       "      <td>0</td>\n",
+       "      <td>@IndiaToday @mausamii2u Hmmmm 1984 ke time phe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108239</th>\n",
+       "      <td>601465224122630144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Aye Humnava Mujhe Apna Bana Le\\nSukhi Padi Dil...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108240</th>\n",
+       "      <td>1067324889361776640</td>\n",
+       "      <td>1</td>\n",
+       "      <td>@dilipmandal 1:1000 H:M ke ratio me dono taraf...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>108241 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   tweet_id  sarcastic  \\\n",
+       "0        508012297558577154          1   \n",
+       "1        507828766161121280          0   \n",
+       "2                2951021322          1   \n",
+       "3          2387227409649664          1   \n",
+       "4        785560441963425792          1   \n",
+       "...                     ...        ...   \n",
+       "108236   788093126841868288          0   \n",
+       "108237   974612791930712064          1   \n",
+       "108238   881421322516971520          0   \n",
+       "108239   601465224122630144          0   \n",
+       "108240  1067324889361776640          1   \n",
+       "\n",
+       "                                                    tweet  \n",
+       "0       LOL ! \\nBC badaa gaandu hai to !\\nso jaa lodu ...  \n",
+       "1       @OFFICIAL_FC_PAK apni sakh khud sambhalen aur ...  \n",
+       "2       Ek aadmi pareshan ho kar Ae bhagwan aisi zinda...  \n",
+       "3       Lol RT @ThePrachi: @shrikhande Who can sing a ...  \n",
+       "4                                                     NaN  \n",
+       "...                                                   ...  \n",
+       "108236  '\\nEk Hunar Hai Jo Kar Gaya Hun Main,,\\n-\\nSab...  \n",
+       "108237  1 Jnaza Ja Raha tha Or Bhot S Log 7 Ja rahy Th...  \n",
+       "108238  @IndiaToday @mausamii2u Hmmmm 1984 ke time phe...  \n",
+       "108239  Aye Humnava Mujhe Apna Bana Le\\nSukhi Padi Dil...  \n",
+       "108240  @dilipmandal 1:1000 H:M ke ratio me dono taraf...  \n",
+       "\n",
+       "[108241 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10616"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(data.tweet.isna()==True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[4, 'tweet'] is pd.notna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "null_idxs = data.tweet.isna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9611it [04:39, 21.57it/s]Rate limit exceeded. Sleeping for 621 seconds.\n",
+      "9611it [04:59, 21.57it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "for idx,bool in tqdm(enumerate(null_idxs)):\n",
+    "    if bool:\n",
+    "        try:\n",
+    "            data.loc[idx, 'tweet'] = client.get_tweet(id=id)[0].text\n",
+    "        except:\n",
+    "            continue        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read"
    ]
   }
  ],
