--- a/Notebooks/Tweets_Scraper.ipynb
+++ b/Notebooks/Tweets_Scraper.ipynb
@@ -53,14 +53,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'LOL ! \\nBC badaa gaandu hai to !\\nso jaa lodu ! Tere se kuch nahi hoga\\n@FanSalmanfan7'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit exceeded. Sleeping for 398 seconds.\n"
+     ]
     }
    ],
    "source": [
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,245 +198,16 @@
     }
    ],
    "source": [
+    "err_ids = []\n",
     "for idx in tqdm(data.index):\n",
     "    id = data.loc[idx, 'tweet_id']\n",
     "    try:\n",
-    "        data.loc[idx, 'tweet'] = client.get_tweet(id=id)[0].text\n",
+    "        with open(os.path.join('/home/karthiktiwari/Documents/Projects/sarcasm_detection/Data', str(idx)+'.txt'), 'w') as txt:\n",
+    "                txt.write(client.get_tweet(id=id)[0].text)\n",
     "    except:\n",
-    "        continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.to_csv('dataset.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet_id</th>\n",
-       "      <th>sarcastic</th>\n",
-       "      <th>tweet</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>508012297558577154</td>\n",
-       "      <td>1</td>\n",
-       "      <td>LOL ! \\nBC badaa gaandu hai to !\\nso jaa lodu ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>507828766161121280</td>\n",
-       "      <td>0</td>\n",
-       "      <td>@OFFICIAL_FC_PAK apni sakh khud sambhalen aur ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2951021322</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Ek aadmi pareshan ho kar Ae bhagwan aisi zinda...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2387227409649664</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Lol RT @ThePrachi: @shrikhande Who can sing a ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>785560441963425792</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108236</th>\n",
-       "      <td>788093126841868288</td>\n",
-       "      <td>0</td>\n",
-       "      <td>'\\nEk Hunar Hai Jo Kar Gaya Hun Main,,\\n-\\nSab...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108237</th>\n",
-       "      <td>974612791930712064</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1 Jnaza Ja Raha tha Or Bhot S Log 7 Ja rahy Th...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108238</th>\n",
-       "      <td>881421322516971520</td>\n",
-       "      <td>0</td>\n",
-       "      <td>@IndiaToday @mausamii2u Hmmmm 1984 ke time phe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108239</th>\n",
-       "      <td>601465224122630144</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Aye Humnava Mujhe Apna Bana Le\\nSukhi Padi Dil...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108240</th>\n",
-       "      <td>1067324889361776640</td>\n",
-       "      <td>1</td>\n",
-       "      <td>@dilipmandal 1:1000 H:M ke ratio me dono taraf...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>108241 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   tweet_id  sarcastic  \\\n",
-       "0        508012297558577154          1   \n",
-       "1        507828766161121280          0   \n",
-       "2                2951021322          1   \n",
-       "3          2387227409649664          1   \n",
-       "4        785560441963425792          1   \n",
-       "...                     ...        ...   \n",
-       "108236   788093126841868288          0   \n",
-       "108237   974612791930712064          1   \n",
-       "108238   881421322516971520          0   \n",
-       "108239   601465224122630144          0   \n",
-       "108240  1067324889361776640          1   \n",
-       "\n",
-       "                                                    tweet  \n",
-       "0       LOL ! \\nBC badaa gaandu hai to !\\nso jaa lodu ...  \n",
-       "1       @OFFICIAL_FC_PAK apni sakh khud sambhalen aur ...  \n",
-       "2       Ek aadmi pareshan ho kar Ae bhagwan aisi zinda...  \n",
-       "3       Lol RT @ThePrachi: @shrikhande Who can sing a ...  \n",
-       "4                                                     NaN  \n",
-       "...                                                   ...  \n",
-       "108236  '\\nEk Hunar Hai Jo Kar Gaya Hun Main,,\\n-\\nSab...  \n",
-       "108237  1 Jnaza Ja Raha tha Or Bhot S Log 7 Ja rahy Th...  \n",
-       "108238  @IndiaToday @mausamii2u Hmmmm 1984 ke time phe...  \n",
-       "108239  Aye Humnava Mujhe Apna Bana Le\\nSukhi Padi Dil...  \n",
-       "108240  @dilipmandal 1:1000 H:M ke ratio me dono taraf...  \n",
-       "\n",
-       "[108241 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10616"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(data.tweet.isna()==True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.loc[4, 'tweet'] is pd.notna"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "null_idxs = data.tweet.isna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "9611it [04:39, 21.57it/s]Rate limit exceeded. Sleeping for 621 seconds.\n",
-      "9611it [04:59, 21.57it/s]"
-     ]
-    }
-   ],
-   "source": [
-    "for idx,bool in tqdm(enumerate(null_idxs)):\n",
-    "    if bool:\n",
-    "        try:\n",
-    "            data.loc[idx, 'tweet'] = client.get_tweet(id=id)[0].text\n",
-    "        except:\n",
-    "            continue        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read"
+    "        err_ids.append(id)\n",
+    "        continue\n",
+    "        "
    ]
   }
  ],
