--- a/Notebooks/Tweets_Scraper.ipynb
+++ b/Notebooks/Tweets_Scraper.ipynb
@@ -87,7 +87,8 @@
       "  3%|▎         | 3454/108241 [1:46:28<8:55:55,  3.26it/s]Rate limit exceeded. Sleeping for 763 seconds.\n",
       "  4%|▎         | 3904/108241 [2:01:30<8:55:02,  3.25it/s]Rate limit exceeded. Sleeping for 762 seconds.\n",
       "  4%|▍         | 4565/108241 [2:17:40<10:18:18,  2.79it/s]Rate limit exceeded. Sleeping for 694 seconds.\n",
-      "  5%|▌         | 5465/108241 [2:33:59<9:02:59,  3.15it/s]Rate limit exceeded. Sleeping for 617 seconds.\n"
+      "  5%|▌         | 5465/108241 [2:33:59<9:02:59,  3.15it/s]Rate limit exceeded. Sleeping for 617 seconds.\n",
+      "  6%|▌         | 6365/108241 [2:49:00<9:00:03,  3.14it/s]Rate limit exceeded. Sleeping for 618 seconds.\n"
      ]
     }
    ],
