--- a/Notebooks/Tweets_Scraper.ipynb
+++ b/Notebooks/Tweets_Scraper.ipynb
@@ -72,23 +72,23 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 13564\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 298/108241 [01:31<9:12:24,  3.26it/s]Rate limit exceeded. Sleeping for 752 seconds.\n",
-      "  1%|          | 749/108241 [16:22<9:10:12,  3.26it/s]Rate limit exceeded. Sleeping for 763 seconds.\n",
-      "  1%|          | 1199/108241 [31:23<9:08:27,  3.25it/s]Rate limit exceeded. Sleeping for 763 seconds.\n",
-      "  2%|▏         | 1651/108241 [46:28<9:05:48,  3.25it/s]Rate limit exceeded. Sleeping for 759 seconds.\n",
-      "  2%|▏         | 2103/108241 [1:01:26<9:02:35,  3.26it/s]Rate limit exceeded. Sleeping for 762 seconds.\n",
-      "  2%|▏         | 2554/108241 [1:16:27<8:59:36,  3.26it/s]Rate limit exceeded. Sleeping for 762 seconds.\n",
-      "  3%|▎         | 3004/108241 [1:31:28<9:02:10,  3.24it/s]Rate limit exceeded. Sleeping for 762 seconds.\n",
-      "  3%|▎         | 3454/108241 [1:46:28<8:55:55,  3.26it/s]Rate limit exceeded. Sleeping for 763 seconds.\n",
-      "  4%|▎         | 3904/108241 [2:01:30<8:55:02,  3.25it/s]Rate limit exceeded. Sleeping for 762 seconds.\n",
-      "  4%|▍         | 4565/108241 [2:17:40<10:18:18,  2.79it/s]Rate limit exceeded. Sleeping for 694 seconds.\n",
-      "  5%|▌         | 5465/108241 [2:33:59<9:02:59,  3.15it/s]Rate limit exceeded. Sleeping for 617 seconds.\n",
-      "  6%|▌         | 6365/108241 [2:49:00<9:00:03,  3.14it/s]Rate limit exceeded. Sleeping for 618 seconds.\n"
+      " 19%|█▊        | 20263/108241 [04:39<7:31:30,  3.25it/s]Rate limit exceeded. Sleeping for 621 seconds.\n",
+      " 20%|█▉        | 21164/108241 [19:41<7:25:31,  3.26it/s]Rate limit exceeded. Sleeping for 620 seconds.\n",
+      " 20%|██        | 22064/108241 [34:43<7:50:53,  3.05it/s]Rate limit exceeded. Sleeping for 619 seconds.\n"
      ]
     }
    ],
@@ -97,8 +97,10 @@
     "for idx in tqdm(data.index):\n",
     "    id = data.loc[idx, 'tweet_id']\n",
     "    try:\n",
-    "        with open(os.path.join('/home/karthiktiwari/Documents/Projects/sarcasm_detection/Data', str(idx)+'.txt'), 'w') as txt:\n",
-    "                txt.write(client.get_tweet(id=id)[0].text)\n",
+    "        path = os.path.join('/home/karthiktiwari/Documents/Projects/sarcasm_detection/Data', str(idx)+'.txt')\n",
+    "        if not os.path.exists(path):\n",
+    "            with open(os.path.join('/home/karthiktiwari/Documents/Projects/sarcasm_detection/Data', str(idx)+'.txt'), 'w') as txt:\n",
+    "                    txt.write(client.get_tweet(id=id)[0].text)\n",
     "    except:\n",
     "        err_ids.append(id)\n",
     "        continue\n",
