--- a/Notebooks/Tweets_Scraper.ipynb
+++ b/Notebooks/Tweets_Scraper.ipynb
@@ -88,7 +88,17 @@
      "text": [
       " 19%|█▊        | 20263/108241 [04:39<7:31:30,  3.25it/s]Rate limit exceeded. Sleeping for 621 seconds.\n",
       " 20%|█▉        | 21164/108241 [19:41<7:25:31,  3.26it/s]Rate limit exceeded. Sleeping for 620 seconds.\n",
-      " 20%|██        | 22064/108241 [34:43<7:50:53,  3.05it/s]Rate limit exceeded. Sleeping for 619 seconds.\n"
+      " 20%|██        | 22064/108241 [34:43<7:50:53,  3.05it/s]Rate limit exceeded. Sleeping for 619 seconds.\n",
+      " 21%|██        | 22964/108241 [53:37<14:10:32,  1.67it/s]Rate limit exceeded. Sleeping for 387 seconds.\n",
+      " 22%|██▏       | 23864/108241 [1:04:48<7:11:50,  3.26it/s]Rate limit exceeded. Sleeping for 617 seconds.\n",
+      " 23%|██▎       | 24764/108241 [1:19:48<7:58:28,  2.91it/s]Rate limit exceeded. Sleeping for 618 seconds.\n",
+      " 24%|██▎       | 25664/108241 [1:37:44<11:39:19,  1.97it/s]Rate limit exceeded. Sleeping for 444 seconds.\n",
+      " 25%|██▍       | 26564/108241 [1:53:31<11:40:59,  1.94it/s]Rate limit exceeded. Sleeping for 399 seconds.\n",
+      " 25%|██▌       | 27464/108241 [2:07:45<11:28:35,  1.96it/s]Rate limit exceeded. Sleeping for 448 seconds.\n",
+      " 26%|██▌       | 28364/108241 [2:22:50<11:03:29,  2.01it/s]Rate limit exceeded. Sleeping for 445 seconds.\n",
+      " 27%|██▋       | 29264/108241 [2:37:52<11:13:47,  1.95it/s]Rate limit exceeded. Sleeping for 444 seconds.\n",
+      " 28%|██▊       | 30164/108241 [2:52:56<11:01:29,  1.97it/s]Rate limit exceeded. Sleeping for 443 seconds.\n",
+      " 29%|██▊       | 31064/108241 [3:04:58<6:35:07,  3.26it/s]Rate limit exceeded. Sleeping for 622 seconds.\n"
      ]
     }
    ],
